--- a/.env
+++ b/.env
@@ -14,5 +14,5 @@ CLOUDINARY_API_SECRET= pGjwJASsEPWryCaNhgExUIp9v3E
 
 PORT = 5000
 
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://medi-predict.vercel.app
 
