--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
-EMAIL_USER=hammadalimughal08@gmail.com
-EMAIL_PASS=zkgr csjk hzzy fkru
-SMTP_HOST=smtp.gmail.com
+# MailerSend SMTP Configuration
+MAILERSEND_USER=apikey
+MAILERSEND_PASS=your_mailersend_api_key_here
+SMTP_HOST=smtp.mailersend.net
 SMTP_PORT=587
 SMTP_SECURE=false
+
+# Legacy Gmail config (commented out)
+# EMAIL_USER=hammadalimughal08@gmail.com
+# EMAIL_PASS=zkgr csjk hzzy fkru
 
 MONGO_URI=mongodb://hammad:mediPredict050@medipredict-shard-00-00.u4d8c.mongodb.net:27017,medipredict-shard-00-01.u4d8c.mongodb.net:27017,medipredict-shard-00-02.u4d8c.mongodb.net:27017/?ssl=true&replicaSet=atlas-tqwadf-shard-0&authSource=admin&retryWrites=true&w=majority&appName=mediPredict
 
